# ai-agent-platform

./: .architecture-violations.md  .clinerules  .env.template  .git-safety-check.sh  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CAPABILITIES.md  CLAUDE.md  DELIVERY_MODEL.md  Dockerfile.agent  GEMINI.md  PROJECT_PROFILE.md  README.md  admin_portal_files.txt  agent_logs.txt  check_err.txt  check_errors.txt  check_errors_2.txt  check_errors_3.txt  check_failures.txt  check_log.txt  claude_agents.txt  conftest.py  crash_log.txt  debug_logs.txt  docker-compose.bind.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.bak  docker_files.txt  docs.txt  env_missing_in_template.txt  env_template_keys.txt  env_unused_in_code.txt  env_used_keys.txt  (+24 more)
services/agent/: .architecture-baseline.json  .dockerignore  .testmondata-shm  .testmondata-wal  Dockerfile  README.md  analyze_trace.py  conftest.py  debug_mock.txt  debug_planner.txt  debug_trace.txt  dump_trace.py  entrypoint.sh  fix_imports.py  fix_migration.py  fix_typing.py  lint_output.txt  mypy_errors.txt  pyproject.toml  pytest_log.txt  pytest_log_2.txt  pytest_log_3.txt  test_app_log.txt  test_app_log_2.txt  test_dispatcher.py  test_output.txt  test_planner.py  test_skill_loader.py
services/agent/.claude/plans/: 2026-01-18-admin-entra-auth-credentials.md
services/agent/alembic/: env.py
services/agent/alembic/versions/: 0255b3157905_add_conversations_metadata.py  20260115_add_price_drop_threshold.py  20260115_add_price_tracker_tables.py  20260115_add_unit_price_alerts.py  20260118_add_user_credentials.py  20260118_add_user_id_to_oauth_tokens.py  20260118_add_users.py  20260122_add_next_check_at_staggered_scheduling.py  20260123_add_context_id_to_products.py  20260124_add_package_size_to_products.py  20260125_add_debug_logging.py  20260125_add_homey_device_cache.py  20260207_add_workspaces.py  20260209_add_mcp_servers.py  20260210_add_composite_indices.py  20260211_add_active_context_to_users.py  20260212_credentials_to_context_scope.py  20260212_rename_virtual_to_shared.py  20260213_add_scheduled_jobs.py  20260217_add_doz_store.py  20260218_conversations_cascade_delete.py  20260218_rename_personal_contexts.py  20260219_add_wiki_imports.py  20260221_add_ado_team_configs.py  20260222_add_display_name_to_contexts.py  20260224_add_skill_improvement_proposals.py  20260225_add_skill_failure_weights.py  20260225_replace_weights_with_ratings.py  2127e8336d9b_drop_debug_logs_table.py  4163dd6af66a_initial_schema.py  68eaa710a95f_merge_heads.py  6c56619b546d_add_check_weekday_to_product_stores.py  ae5be0359696_add_cascade_to_core_fks.py  c2c138727ae5_add_oauth_tokens_and_states.py  c2fbb800bd8e_add_pinned_files.py  d3d249838bf6_add_tool_permissions.py  f12c8c12fd61_merge_heads.py
services/agent/config/: ado_mappings.yaml  models.yaml  tools.yaml
services/agent/config/templates/: feature.md  security_finding.md  security_incident_high.md  security_incident_medium.md  user_story.md
services/agent/docs/: SECURITY_LOGGING.md
services/agent/scripts/: init_db.py  manage_tool_permissions.py  migrate_ado_mappings.py  migrate_memory_context.py  run_semantic_eval.py  test_azure_devops.py  test_homey_layers.py  verify_tools.py
services/agent/src/: __init__.py  check_qdrant_api.py  manual_search.py  manual_test.py  verify_tools.py
services/agent/src/core/: command_loader.py  context_manager.py  providers.py  system_commands.py
services/agent/src/core/agents/: __init__.py  executor.py  planner.py  response_agent.py  supervisor_plan.py  supervisor_step.py
services/agent/src/core/auth/: __init__.py  admin_session.py  credential_service.py  header_auth.py  models.py  oauth_client.py  token_manager.py  user_service.py
services/agent/src/core/context/: __init__.py  files.py  service.py
services/agent/src/core/core/: app.py  config.py  embedder.py  litellm_client.py  memory.py  model_registry.py  models.py  routing.py  service.py  service_factory.py  state.py
services/agent/src/core/db/: __init__.py  engine.py  models.py  oauth_models.py  retention.py
services/agent/src/core/debug/: __init__.py  (+1 more)
services/agent/src/interfaces/: base.py  protocols.py
services/agent/src/orchestrator/: dispatcher.py  models.py  price_tracker.py  skill_loader.py  startup.py  utils.py
services/agent/src/shared/: chunk_filter.py  content_classifier.py  models.py  sanitize.py  streaming.py
services/agent/src/stack/: __init__.py  __main__.py  auth.py  backup.py  checks.py  cli.py  compose.py  health.py  qdrant.py  tooling.py  utils.py
services/agent/src/utils/: template.py
services/agent/tests/: phase5_demo.py  test_context_manager.py  verify_phase2b.py  verify_phase3.py
services/agent/tests/core/: test_mcp_client.py
services/agent/tests/integration/: conftest.py  test_admin_crud.py  test_ado_config.py  test_api_flow.py  test_context_isolation.py  test_db_persistence.py  test_multi_user_flow.py  test_openrouter_models.py  test_streaming_api.py  test_zapier_mcp.py
services/agent/tests/semantic/: conftest.py  golden_queries.yaml  llm_evaluator.py  stream_parser.py  test_end_to_end.py  trace_validator.py
services/agent/tests/unit/: test_csrf.py  test_rate_limit.py  test_security_logger.py  test_ssrf_protection.py
(+532 files in other folders)
