[tool.poetry]
name = "ai-agent-platform"
version = "0.1.0"
description = "Local AI agent platform with FastAPI agent server and Typer-based stack CLI."
authors = ["MagTer Contributors <opensource@magter.ai>"]
readme = "README.md"
packages = [
    { include = "agent", from = "src" },
    { include = "stack", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
typer = "^0.12.3"
rich = "^13.7.1"
docker = "^7.1.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
qdrant-client = "^1.7.3"
litellm = "^1.35.10"
numpy = "^1.26.4"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.4"
black = "^24.4.2"
mypy = "^1.10.0"
respx = "^0.21.1"

[tool.poetry.scripts]
stack = "stack.cli:app"
agent-app = "agent.core.app:run"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "fetcher",
    "indexer",
    "openwebui",
    "embedder",
    "ragproxy",
    "searxng",
    "tests",
    "flows",
    "scripts",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "N"]
ignore = ["S101", "S104", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["src/agent/tests", "src/stack/tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
